# api/internal/docs/swagger.yaml
@@ -63,6 +63,11 @@ definitions:
       long_url:
         type: string
     type: object
+  rest.updateLinkRequest:
+    properties:
+      long_url:
+        type: string
+    type: object
   rest.userResponse:
     properties:
       email:
@@ -302,6 +307,85 @@ paths:
       security:
       - BearerAuth: []
       summary: List my links
+      tags:
+      - links
+  /links/{code}:
+    delete:
+      parameters:
+      - description: Short code
+        in: path
+        name: code
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete a link
+      tags:
+      - links
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Short code
+        in: path
+        name: code
+        required: true
+        type: string
+      - description: New long URL
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/rest.updateLinkRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.linkResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Edit a link's destination
       tags:
       - links
 securityDefinitions:
